# Mancurya

./: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp  run.sh
include/Mancurya/: Environment.hpp  Fleet.hpp  FleetManager.hpp  GLBridge.hpp  Sea.hpp  Shader.hpp  Types.hpp
shaders/: projectile.frag  projectile.vert  water.frag  water.vert
src/: Environment.cpp  Fleet.cpp  FleetManager.cpp  GLBridge.cpp  Sea.cpp
